	locker now.

2008-04-09	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: spawn() method for
	cloning primitives. It's one of the possible soft-tricks to implement
	anonymous primitives.

2008-04-03	Denis M. Gabaidulin

	* meta/classes/MetaConfiguration.class.php: lazy fetching strategy
	support for SpookedClass properties.

2008-04-02	Ivan Y. Khvostishkov

	* main/Application/: refactoring. Added test cases for HttpRewriter.

	* core/Base/Scope.class.php: simple but useful wrapper for arrays.

2008-04-02	Konstantin V. Arkhipov

	* core/Form/: array type-hint added to import's scope argument and all
	related public methods.

	* core/Form/: error handling moved from Form to primitives.

2008-04-01	Ivan Y. Khvostishkov

	* main/Application/ApplicationUrl.class.php: now reference methods
	return not a strings, but ApplicationUrl itself. Use below wrappers for
	back compatibility.

	* main/Application/HtmlUrl.class.php,
	main/Application/RedirectUrl.class.php: helpers for views and
	controllers.

2008-03-31	Ivan Y. Khvostishkov

	* core/Form/Primitives/BasePrimitive.class.php: Assert::isArray() added
	to import()

	* main/EntityProto/Builders/ObjectToObjectCast.class.php: useful to
	cast one class to another.

2008-03-31	Konstantin V. Arkhipov

	* global.inc.php.tpl: added cache invalidation upon failed include
	from cached location; solves class moving case.

2008-03-29	Konstantin V. Arkhipov

	* core/Types/: basic types handling logic extracted from
	core/Form/Primitives/.

2008-03-29	Ivan Y. Khvostishkov

	* main/Net/HttpUrl.class.php: toHttpRequest() helper.

	* main/Application/: refactoring of ApplicationUrl. New classes:
	HttpRewriter, ApplicationRequestScope. Removed class:
	ScopeNavigationSchema (use rewriter instead).

2008-03-28	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php: now rotates
	queue upon overflow, it's the same strategy as in
	SharedMemorySegmentHandler.

2008-03-27	Konstantin V. Arkhipov
