@@ -1,6 +1,6 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2007 by Anton E. Lebedevich                             *
+ *   Copyright (C) 2007-2008 by Anton E. Lebedevich                        *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU Lesser General Public License as        *
@@ -16,19 +16,19 @@
 	abstract class BigNumberFactory extends Singleton
 	{
 		/**
-		 * @return BigInteger
+		 * @return ExternalBigInteger
 		**/
 		abstract public function makeNumber($number, $base = 10);
 		
 		/**
 		 * make number from big-endian signed two's complement binary notation
-		 * @return BigInteger
+		 * @return ExternalBigInteger
 		**/
 		abstract public function makeFromBinary($binary);
 		
 		/**
 		 * @param $stop maximum random number
-		 * @return BigInteger
+		 * @return ExternalBigInteger
 		**/
 		abstract public function makeRandom($stop, RandomSource $source);
 	}
